--- a/mypy.ini
+++ b/mypy.ini
@@ -9,16 +9,7 @@ platform = linux
 # Import discovery
 mypy_path = src
 packages = src
-exclude = (?x)(
-    ^build/.*$          # Build artifacts
-    | ^dist/.*$         # Distribution files  
-    | ^\..*$            # Hidden directories
-    | ^__pycache__/.*$  # Python cache
-    | ^\.mypy_cache/.*$ # MyPy cache
-    | ^node_modules/.*$ # Node modules if any
-    | ^venv/.*$         # Virtual environment
-    | ^env/.*$          # Alternative venv name
-)
+exclude = ^(build|dist|\..*|__pycache__|\.mypy_cache|node_modules|venv|env)/.*$
 
 # Core strictness - balanced approach for ML codebase
 strict = False  # We'll enable specific flags instead for better control
