--- a/config/default_settings.yaml
+++ b/config/default_settings.yaml
@@ -1,2 +1,7 @@
 top_k: 5
 rrf_k: 60
+
+# Compute device selection: auto chooses best available
+device_preference: auto  # auto, cpu, gpu_openvino, gpu_xpu
+# Numerical precision for inference and retrieval operations
+precision: fp32          # fp32, fp16, int8
