--- a/mypy.ini
+++ b/mypy.ini
@@ -3,7 +3,7 @@
 
 [mypy]
 # Python version and platform
-python_version = 3.12
+python_version = 3.9
 platform = linux
 
 # Import discovery
@@ -12,27 +12,27 @@ packages = src
 exclude = ^(build|dist|\..*|__pycache__|\.mypy_cache|node_modules|venv|env)/.*$
 
 # Core strictness - balanced approach for ML codebase
-strict = False  # We'll enable specific flags instead for better control
+strict = False
 warn_unused_configs = True
-warn_redundant_casts = True  
+warn_redundant_casts = True
 warn_unused_ignores = True
 
 # Type checking behavior
 check_untyped_defs = True
-disallow_untyped_calls = False  # Too strict for ML libraries
-disallow_untyped_defs = False   # Gradual typing approach
+disallow_untyped_calls = False
+disallow_untyped_defs = False
 disallow_incomplete_defs = True
-disallow_untyped_decorators = False  # Many ML decorators are untyped
+disallow_untyped_decorators = False
 
 # Dynamic typing controls
 disallow_any_explicit = False
 disallow_any_generics = True
 disallow_subclassing_any = True
-warn_return_any = False  # ML libraries often return Any
+warn_return_any = False
 
 # None and Optional handling
 strict_optional = True
-implicit_optional = False  # Modern Python style
+implicit_optional = False
 
 # Error reporting
 show_error_codes = True
@@ -54,7 +54,7 @@ cache_dir = .mypy_cache
 skip_cache_mtime_checks = False
 
 # Third-party library stubs
-ignore_missing_imports = False  # We'll handle specific libraries below
+ignore_missing_imports = False
 
 # =============================================================================
 # Per-module configuration for dependencies and specific patterns
@@ -201,16 +201,3 @@ warn_return_any = False
 # Development and debugging tools
 [mypy-structlog.*]
 ignore_missing_imports = True
-
-# =============================================================================
-# Temporary overrides for gradual typing adoption
-# =============================================================================
-
-# If specific modules need temporary relaxation during development
-# Uncomment and adjust as needed:
-
-# [mypy-src.models.*]
-# disallow_untyped_defs = False
-
-# [mypy-src.api.*]  
-# disallow_untyped_defs = False
