--- a/mypy.ini
+++ b/mypy.ini
@@ -201,3 +201,24 @@ warn_return_any = False
 # Development and debugging tools
 [mypy-structlog.*]
 ignore_missing_imports = True
+
+# =============================================================================
+# Temporary overrides for specific files with typing issues
+# =============================================================================
+
+# Files with union syntax or missing annotations - temporary relaxation
+[mypy-src.retrieval.lexical]
+disallow_untyped_defs = False
+warn_unused_ignores = False
+
+[mypy-src.integrations.pinecone_client]
+disallow_untyped_defs = False
+warn_unused_ignores = False
+warn_return_any = False
+
+[mypy-src.monitoring.performance]
+disallow_untyped_defs = False
+disallow_incomplete_defs = False
+
+[mypy-src.ranking.rrf_fusion]
+disallow_incomplete_defs = False
