--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,14 @@
 # mypy configuration for personal-rag-copilot
 # Optimized for AI/ML project with optional dependencies and gradual typing adoption
+# 
+# INITIAL SETUP: Very permissive to get mypy passing
+# ROADMAP: Gradually enable stricter checks module by module as types are added
+#
+# To tighten checks:
+# 1. Set disallow_incomplete_defs = True for specific modules  
+# 2. Set disallow_untyped_defs = True once functions have type hints
+# 3. Enable warn_return_any = True for modules with proper typing
+# 4. Remove warn_unused_ignores = False and clean up # type: ignore comments
 
 [mypy]
 # Python version and platform
