--- a/config/default_settings.yaml
+++ b/config/default_settings.yaml
@@ -5,3 +5,8 @@ rrf_k: 60
 device_preference: auto  # auto, cpu, gpu_openvino, gpu_xpu
 # Numerical precision for inference and retrieval operations
 precision: fp32          # fp32, fp16, int8
+
+evaluation_thresholds:
+  faithfulness: 0.7
+  relevancy: 0.7
+  precision: 0.7
