--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dev = [
     "pytest-cov>=4.1.0",
     "black>=23.0.0",
     "flake8>=7.0.0",
-    "mypy>=1.5.0",
+    "pyright>=1.1.405",
     "fpdf2>=2.7.0",
     "httpx>=0.25.0",
 ]
