--- a/.gitignore
+++ b/.gitignore
@@ -165,6 +165,10 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 
+# Pyright type checker
+typings/
+.pyright/
+
 # Cython debug symbols
 cython_debug/
 
