--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,8 +1,23 @@
 {
   "typeCheckingMode": "strict",
   "pythonVersion": "3.12",
-  "venvPath": ".",
-  "venv": ".venv",
-  "include": ["src", "app.py", "tests"],
-  "exclude": [".venv", ".git", "node_modules", "**/__pycache__"]
+  "include": [
+    "src",
+    "app.py",
+    "tests"
+  ],
+  "exclude": [
+    ".venv",
+    ".git",
+    "node_modules",
+    "**/__pycache__"
+  ],
+  "executionEnvironments": [
+    {
+      "root": ".",
+      "extraPaths": [
+        "./src"
+      ]
+    }
+  ]
 }
