--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
  # pyproject.toml
 
 [build-system]
-requires = ["setuptools>=68", "wheel"]
+requires = ["setuptools>=68", "wheel", "pip-tools>=7.0.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "personal-rag-copilot"
 version = "0.1.0"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.13"
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
@@ -43,6 +43,24 @@ dev = [
     "pyright>=1.1.405",
     "fpdf2>=2.7.0",
     "httpx>=0.25.0",
+]
+gpu-cu12 = [
+    "torch>=2.0.0; sys_platform == 'linux'",
+    "nvidia-cublas-cu12>=12.8.4.1; sys_platform == 'linux'",
+    "nvidia-cuda-cupti-cu12>=12.8.90; sys_platform == 'linux'",
+    "nvidia-cuda-nvrtc-cu12>=12.8.93; sys_platform == 'linux'",
+    "nvidia-cuda-runtime-cu12>=12.8.90; sys_platform == 'linux'",
+    "nvidia-cudnn-cu12>=9.10.2.21; sys_platform == 'linux'",
+    "nvidia-cufft-cu12>=11.3.3.83; sys_platform == 'linux'",
+    "nvidia-cufile-cu12>=1.13.1.3; sys_platform == 'linux'",
+    "nvidia-curand-cu12>=10.3.9.90; sys_platform == 'linux'",
+    "nvidia-cusolver-cu12>=11.7.3.90; sys_platform == 'linux'",
+    "nvidia-cusparse-cu12>=12.5.8.93; sys_platform == 'linux'",
+    "nvidia-cusparselt-cu12>=0.7.1; sys_platform == 'linux'",
+    "nvidia-nccl-cu12>=2.27.3; sys_platform == 'linux'",
+    "nvidia-nvjitlink-cu12>=12.8.93; sys_platform == 'linux'",
+    "nvidia-nvtx-cu12>=12.8.90; sys_platform == 'linux'",
+    "triton>=3.4.0; sys_platform == 'linux'",
 ]
 
 [tool.black]
